fix layout issue. remove order.

--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -54,7 +54,7 @@ h1, h2, h3{
 }
 
 .l-main__content {
-  overflow: hidden;
+  overflow: auto;
 }
 
 .l-main__footer {
